--- a/src/main/webapp/member-add.html
+++ b/src/main/webapp/member-add.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <article class="page-container">
-	<form action="/user/add" method="post" class="form form-horizontal" id="form-member-add">
+	<form action="" onsubmit="onsubmit()" method="post" class="form form-horizontal" id="form-member-add">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>用户名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
@@ -97,7 +97,7 @@
 		</div>
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
-				<input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
+				<input class="btn btn-primary radius" onclick="onsubmit()" type="button" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
 			</div>
 		</div>
 	</form>
@@ -122,7 +122,7 @@ $(function(){
 		radioClass: 'iradio-blue',
 		increaseArea: '20%'
 	});
-	
+
 	$("#form-member-add").validate({
 		rules:{
 			username:{
@@ -158,6 +158,7 @@ $(function(){
 		success:"valid",
 		submitHandler:function(form){
 			//$(form).ajaxSubmit();
+			debugger;
 			console.log("有没有来数据")
 			var index = parent.layer.getFrameIndex(window.name);
 			//parent.$('.btn-refresh').click();
@@ -196,6 +197,48 @@ $(function(){
 		}
 	});
 });
+
+var onsubmit = function(){
+			//$(form).ajaxSubmit();
+			debugger;
+			console.log("有没有来数据")
+			var index = parent.layer.getFrameIndex(window.name);
+			//parent.$('.btn-refresh').click();
+			//parent.layer.close(index);
+			var name = $('#name').val();
+			var password = $('#password').val();
+			var phone = $('#phone').val();
+			var identityCode = $('#identityCode').val();
+			var sex = $('#sex').val();
+			var address = $('#address').val();
+
+			var data = {
+				name : name,
+				password : password,
+				phone : phone,
+				identityCode : identityCode,
+				sex : sex,
+				address : address
+			}
+
+			console.log(data);
+
+			$.ajax({
+				url: '/user/add',
+				data : data,
+				dataType: 'json',
+				contentType : 'application/json;charset=utf-8'
+				success: function(data){
+					layer.msg('添加成功!',{icon: 5,time:1000});
+				},
+				error:function(data) {
+					console.log(data.msg);
+				}
+			});
+			return false;		
+		}
+
+
 </script> 
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
