--- a/src/main/webapp/member-add.html
+++ b/src/main/webapp/member-add.html
@@ -25,12 +25,10 @@
 <!--/meta 作为公共模版分离出去-->
 
 <title>添加用户 - H-ui.admin v3.0</title>
-<meta name="keywords" content="H-ui.admin v3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-<meta name="description" content="H-ui.admin v3.0，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
 <body>
 <article class="page-container">
-	<form action="" onsubmit="onsubmit()" method="post" class="form form-horizontal" id="form-member-add">
+	<form action="" method="post" class="form form-horizontal" id="form-member-add">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>用户名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
@@ -69,7 +67,7 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>身份证：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" name="identityCode" id="email">
+				<input type="text" class="input-text" name="identityCode" id="identityCode">
 			</div>
 		</div>
 		<!--
@@ -97,7 +95,7 @@
 		</div>
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
-				<input class="btn btn-primary radius" onclick="onsubmit()" type="button" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
+				<input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
 			</div>
 		</div>
 	</form>
@@ -117,6 +115,7 @@
 <script type="text/javascript" src="lib/jquery.validation/1.14.0/messages_zh.js"></script>
 <script type="text/javascript">
 $(function(){
+	
 	$('.skin-minimal input').iCheck({
 		checkboxClass: 'icheckbox-blue',
 		radioClass: 'iradio-blue',
@@ -157,59 +156,12 @@ $(function(){
 		focusCleanup:true,
 		success:"valid",
 		submitHandler:function(form){
-			//$(form).ajaxSubmit();
 			debugger;
-			console.log("有没有来数据")
-			var index = parent.layer.getFrameIndex(window.name);
-			//parent.$('.btn-refresh').click();
-			//parent.layer.close(index);
-			var name = $('#name').val();
+			var name = $('#username').val();
 			var password = $('#password').val();
 			var phone = $('#phone').val();
 			var identityCode = $('#identityCode').val();
-			var sex = $('#sex').val();
-			var address = $('#address').val();
-
-			var data = {
-				name : name,
-				password : password,
-				phone : phone,
-				identityCode : identityCode,
-				sex : sex,
-				address : address
-			}
-
-			console.log(data);
-
-			$.post({
-				url: '/user/add',
-				data : data,
-				dataType: 'json',
-				contentType : 'application/json;charset=utf-8'
-				success: function(data){
-					layer.msg('添加成功!',{icon: 5,time:1000});
-				},
-				error:function(data) {
-					console.log(data.msg);
-				}
-			});
-			return false;		
-		}
-	});
-});
-
-var onsubmit = function(){
-			//$(form).ajaxSubmit();
-			debugger;
-			console.log("有没有来数据")
-			var index = parent.layer.getFrameIndex(window.name);
-			//parent.$('.btn-refresh').click();
-			//parent.layer.close(index);
-			var name = $('#name').val();
-			var password = $('#password').val();
-			var phone = $('#phone').val();
-			var identityCode = $('#identityCode').val();
-			var sex = $('#sex').val();
+			var sex = 1;//$('#sex').val();
 			var address = $('#address').val();
 
 			var data = {
@@ -224,21 +176,29 @@ var onsubmit = function(){
 			console.log(data);
 
 			$.ajax({
+				type : "post",
 				url: '/user/add',
 				data : data,
 				dataType: 'json',
-				contentType : 'application/json;charset=utf-8'
 				success: function(data){
-					layer.msg('添加成功!',{icon: 5,time:1000});
+					layer.msg("添加成功",{
+						icon : 5,
+						time : 1000,
+						end  : function(data,index){
+							window.parent.location.reload();
+						}
+					})
+					//var index = parent.layer.getFrameIndex(window.name);
+					//parent.$('.btn-refresh').click();
+					
 				},
 				error:function(data) {
-					console.log(data.msg);
+					layer.msg(data.msg);
 				}
 			});
-			return false;		
 		}
-
-
+	});
+});
 </script> 
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
